* Fixed removal of OutDatedSessionNotification in TestCasePlayer on reset. * Moved close button of notifications a bit to the left to allow closing while scrollbar is available on mac.

--- a/KnowWE/KnowWE-Resources/src/main/webapp/KnowWEExtension/css/tooltipster.css
+++ b/KnowWE/KnowWE-Resources/src/main/webapp/KnowWEExtension/css/tooltipster.css
@@ -377,6 +377,3 @@ html {
 	padding: 8px 10px;
 }
 
-#KnowWENotificationMessage {
-	width: 97%;
-}
